# dask-funk-ng

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml
.github/workflows/: bump_version.yaml  tests.yaml
